<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/new_note_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_note_title"
        style="@style/TextView_Title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <EditText
            android:id="@+id/new_note_title"
            android:padding="18dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"

            android:textSize="18sp"
            android:hint="@string/title_hint"
            android:gravity="bottom"
            android:background="#fac584"/>
        <EditText
            android:id="@+id/new_note_content"
            android:padding="18dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:textSize="18sp"
            android:hint="@string/content_hint"
            android:gravity="bottom"
            android:background="#ecc57c"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center">
        <com.example.intelligent_restranant_boss.toDo.My_TextButton
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/new_note_mTB"
            android:background="#b67676"/>
    </LinearLayout>
</LinearLayout>