<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

     <include
        android:layout_width="match_parent"
        android:layout_height="40dp"
        layout="@layout/back_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip"
                android:text="@string/helpCopyright"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactTitle"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactQQ"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactMail"
                android:textColor="#FFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/helpContactWeibo"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>